# remote-shutdown

./: .gitignore  LICENSE.txt  README.md  app.spec  pyinstaller.nsi  pyinstaller.ps1  pyproject.toml
remote_shutdown/: __main__.py  port.py
src/: README.md  package.json  src.js
www/: index.html  main.css
